--- a/stock_picking_report_valued/views/res_partner_view.xml
+++ b/stock_picking_report_valued/views/res_partner_view.xml
@@ -8,7 +8,7 @@
         <field name="arch" type="xml">
             <xpath expr="//page[@name='sales_purchases']//field[@name='user_id']" position="after">
                 <field name="valued_picking"
-                       attrs="{'invisible': [('customer', '=', False)]}"/>
+                       attrs="{'invisible': [('customer', '=', False)], 'readonly': [('parent_id','!=',False)]}"/>
             </xpath>
         </field>
     </record>
